syntax = "proto3";

package skaiproto.action;

import "skaiproto/SkaimotProtoMsg.proto";

enum ActionType {
    DEFAULT = 0;
    JUMPROPE = 1;
    TRIPPING = 2;
    SHROOMS = 3;
    TRIPPING_ON_SHROOMS = 4;
    ETC = 5;
}

message Action {
    // action or interaction type
    ActionType action = 1;

    // box around the action 
    skaiproto.skaimot.BoundingBox location = 2;

    // list of boxes of relevant people, cars, etc associated with action
    // your process can receive from skaimot or whatever to get these
    repeated skaiproto.skaimot.BoundingBox associated_boxes = 3;
}

message ActionProtoMsg {
    message CameraFrame {
        // camera mac address turned into serial num
        uint64 camera_id = 1;

        // 1e9 * epoch timestamp
        uint64 timestamp = 2;

        repeated Action actions_in_frame = 3;

    }
    repeated CameraFrame camera_frames = 1;
}
